# massmail

./: .gitignore  README.md  pyproject.toml
massmail/: __init__.py  __main__.py
tests/: test_massmail.py
