[tool.poetry]
name = "massmail"
version = "0.1.0"
description = "Mass Mailing via SMTP"
authors = ["Sergey M <yamldeveloper@proton.me>"]
homepage = "https://github.com/s3rgeym/massmail"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
pylint = "^2.6.0"

[tool.poetry.scripts]
massmail = "massmail:massmail"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
